WebCore/page/ContextMenuController.cpp
@@ -69,6 +69,11 @@ ContextMenuController::~ContextMenuController()
     m_client->contextMenuDestroyed();
 }
 
+void ContextMenuController::clearContextMenu()
+{
+    m_contextMenu.set(0);
+}
+
 void ContextMenuController::handleContextMenuEvent(Event* event)
 {
     ASSERT(event->type() == contextmenuEvent);
